--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>LunaGoku | Welcome to LunaGoku</title>
 
         <link href="" rel="mask-icon" color="#000" />
-        <link href="./assets/LunaGoku.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+        <link href="./assets/lunagoku.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
         <link href="./assets/joomla-fontawesome.min.css" rel="stylesheet" />
         <noscript><link href="/media/system/css/joomla-fontawesome.min.css?556de5c8d1323ab479933369210f7109" rel="stylesheet" /></noscript>
@@ -3773,7 +3773,7 @@
                                                                                                                 width="1059"
                                                                                                                 height="1396"
                                                                                                                 data-skip-lazy="1"
-                                                                                                                src="./assets/LunaGoku.png"
+                                                                                                                src="./assets/lunagoku.png"
                                                                                                                 loading="eager"
                                                                                                             />
                                                                                                         </picture>
