--- a/index.html
+++ b/index.html
@@ -4100,7 +4100,7 @@
                                                                                                     <div
                                                                                                         class="n2-ss-button-container n2-ss-item-content n2-ow n2-font-6fec20312e7145dcef66482aa0c92303-link n2-ss-nowrap n2-ss-button-container--non-full-width"
                                                                                                     >
-                                                                                                        <a class="n2-style-8072242b715c088bdcef4a4df881f9ea-heading n2-ow" href="http://twitter.com/LunaGoku" tabindex="0">
+                                                                                                        <a class="n2-style-8072242b715c088bdcef4a4df881f9ea-heading n2-ow" href="https://twitter.com/Lunagokuoffical" tabindex="0">
                                                                                                             <div><div>TWITTER</div></div>
                                                                                                         </a>
                                                                                                     </div>
